--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ psycopg2-binary = "2.9.3"
 gunicorn = "20.1.0"
 Flask-Migrate = "3.1.0"
 flask-login = "^0.6.2"
+flask-mail = "^0.9.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.1"
