--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = ""
 authors = ["denys <denysburimov@gmail.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = "3.9.16"
 Flask = "2.1.0"
 Flask-SQLAlchemy = "2.5.1"
 email-validator = "1.1.3"
